# MIMD-DM-Parallel-sum

./: .gitignore  CMakeLists.txt  analytics.c  analytics.h  analytics.ipynb  csv_order.py  dati_medi.csv  dati_medi16.csv  dati_medi32.csv  dati_medi64.csv  dati_medi8.csv  main  main.c  mean_csv.py  my_math.c  my_math.h  output.csv  output_sorted.csv  pdc1.pbs  rapporto_tempi.csv  readme.md  script.pbs  speedup_efficienza_p16.csv  speedup_efficienza_p32.csv  speedup_efficienza_p64.csv  speedup_efficienza_p8.csv  strategies.c  strategies.h  su_eff.csv
48proc/: 48proc_1s
output/: analytics_data.csv  analytics_data_complete.csv  analytics_data_mean.csv
significant_execution1/: pdc1.out  pdc1.pbs
significant_execution2/: pdc1.out  pdc1.pbs
